<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:theme="@style/AppTheme.Toolbar"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:text="@string/blank"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center|bottom"
                    android:singleLine="false"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@drawable/icon1"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:text="@string/letter_formal"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center|bottom"
                    android:singleLine="false"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@drawable/icon2"
                    />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:text="@string/letter_informal"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center|bottom"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@drawable/icon3"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:text="@string/drawing_card"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center|bottom"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@drawable/icon4"
                    />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:text="@string/template"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center|bottom"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@drawable/icon5"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_margin="10dp">
                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/buttonshape"
                    android:text="@string/setting"
                    android:textColor="@color/colorButtonText"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center|bottom"
                    android:paddingTop="25dp"
                    android:paddingBottom="10dp"
                    android:drawableTop="@drawable/icon6"
                    />
            </RelativeLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>