<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:theme="@style/AppTheme.Toolbar"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/etText"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/textHint"
            android:textColorHint="@color/textHint"
            android:textColor="@color/colorBlack"
            android:background="@drawable/edit_text_style"
            android:layout_margin="20dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            />
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <ToggleButton
                    android:id="@+id/toggleButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:textOff="語音輸入"
                    android:textOn="輸入中"
                    android:text="ToggleButton" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
            </RelativeLayout>
        </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button_cancel"
                    android:background="@drawable/button_style2"
                    android:text="@string/cancel"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:gravity="center_vertical|left"
                    android:drawableLeft="@drawable/ic_cancel"
                    android:paddingLeft="50dp"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/button_save"
                    android:background="@drawable/button_style2"
                    android:text="@string/send"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:gravity="center_vertical|left"
                    android:drawableLeft="@drawable/ic_action_save"
                    android:paddingLeft="50dp"
                    />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>